<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background" 
    >

    <TextView
        android:id="@+id/ProgramName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landLocation"
        android:textColor="#056da1"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/getLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentlocation" />

    <Button
        android:id="@+id/viewOnMapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationOnmap" />

    <Button
        android:id="@+id/checkInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createLocation" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info" />

</LinearLayout>