<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textcheckin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#0000ff"
        android:text="@string/savecurrentcoordinate" />

<LinearLayout
    android:id="@+id/group"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" > 
    
   <Button
       android:id="@+id/saveinbt"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/saveinbt" />

   <Button
       android:id="@+id/showallinmap"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/displayalllocation" />

   <Button
       android:id="@+id/delbt"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/delete" />
    
</LinearLayout>

<ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        />

</LinearLayout>

